add link to program in transition page

--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -39,7 +39,7 @@
             <span class="mono"><a href="/transaction?id={{ transaction_id }}">{{ transaction_id }}</a></span>
         {% endcall %}
         {% call data_line("Program ID") %}
-            <span class="mono">{{ program_id }}</span>
+            <span class="mono"><a href="/program?id={{ program_id }}">{{ program_id }}</a></span>
         {% endcall %}
         {% call data_line("Function name") %}
             <span class="mono">{{ function_name }}</span>
