--- a/webui/templates/programs.jinja2
+++ b/webui/templates/programs.jinja2
@@ -34,7 +34,7 @@
                 <tbody>
                 {% for program in programs %}
                     <tr>
-                        <td><span class="mono">{{ program.program_id }}</span></td>
+                        <td><span class="mono"><a href="/program?id={{ program.program_id }}">{{ program.program_id }}</a></span></td>
                         <td><a href="/block?h={{ program.height }}">{{ program.height }}</a></td>
                         <td><span class="mono"><a href="/transaction?id={{ program.transaction_id }}">{{ program.transaction_id }}</a></span></td>
                         <td>{{ program.called }}</td>
