populate template ctx

--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -98,7 +98,7 @@
             {% endcall %}
         {% elif input.type == "ExternalRecord" %}
             {% call data_line("Commitment") %}
-                <span class="mono">{{ input.input_commitment }}</span>
+                <span class="mono">{{ input.commitment }}</span>
             {% endcall %}
         {% endif %}
             <br>
