--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -135,18 +135,18 @@
             {% call data_line("Record data") %}
                 <span class="mono record">{{ output.record }}</span>
             {% endcall %}
-            {% call sub_data_line("owner") %}
+            {% call sub_data_line_safe('<span class="mono">owner</span>') %}
                 <advanced-link scope="transition" object="{{ ts_id }}" type="output_record" index="{{ loop.index0 }}" field="owner">
                     <span class="mono">{{ output.record_data.owner }}</span>
                 </advanced-link>
             {% endcall %}
-            {% call sub_data_line("gates") %}
+            {% call sub_data_line('<span class="mono">gates</span>') %}
                 <advanced-link scope="transition" object="{{ ts_id }}" type="output_record" index="{{ loop.index0 }}" field="gates">
                     <span class="mono">{{ output.record_data.gates }}</span>
                 </advanced-link>
             {% endcall %}
             {% for identifier, entry in output.record_data.data %}
-                {% call sub_data_line(identifier) %}
+                {% call sub_data_line('<span class="mono">' + identifier + "</span>") %}
                     <advanced-link scope="transition" object="{{ ts_id }}" type="output_record" index="{{ outer_loop.index0 }}" field="{{ identifier }}">
                         <span class="mono">{{ entry }}</span>
                     </advanced-link>
