forgot to import the new macro

--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -22,7 +22,7 @@
 
 {% endblock %}
 
-{% from "macros.jinja2" import data_line, sub_data_line %}
+{% from "macros.jinja2" import data_line, sub_data_line, sub_data_line_safe %}
 
 {% block content %}
 
