use unstriped table style

--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -120,7 +120,7 @@
 
             <div id="transitions">
                 <h4>Recent calls</h4>
-                <table id="transitions-table">
+                <table id="transitions-table" class="unstriped">
                     <thead>
                     <tr>
                         <td>Block height</td>
