--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -69,7 +69,7 @@
 
         <div id="transitions">
             <h4>{% if type == "Deploy" %}Fee transition{% else %}Transitions{% endif %}</h4>
-            <table id="transitions-table">
+            <table id="transitions-table" class="unstriped">
                 <thead>
                 <tr>
                     <td>Transition ID</td>
