fix similar program navbar

--- a/webui/templates/similar_programs.jinja2
+++ b/webui/templates/similar_programs.jinja2
@@ -21,7 +21,7 @@
 
         <div id="blocks">
 
-            {{ nav(page, total_pages, "/similar_programs") }}
+            {{ nav(page, total_pages, "/similar_programs?id=" + program_id + "&") }}
 
             <table class="unstriped">
                 <thead>
@@ -44,7 +44,7 @@
                 </tbody>
             </table>
 
-            {{ nav(page, total_pages, "/similar_programs") }}
+            {{ nav(page, total_pages, "/similar_programs?id=" + program_id + "&") }}
 
         </div>
     </div>
