update filter description

--- a/webui/templates/programs.jinja2
+++ b/webui/templates/programs.jinja2
@@ -17,9 +17,9 @@
         <div id="header">
             <h3>Program Registry</h3>
             {% if no_helloworld %}
-                <p>Showing all programs except the default "Hello World" and similar programs. <a href="/programs">Show all programs</a></p>
+                <p>Showing all programs except the "Hello World", workshop programs and similar programs. <a href="/programs">Show all programs</a></p>
             {% else %}
-                <p>Showing all programs, including the default "Hello World" and similar programs. <a href="/programs?no_helloworld=1">Don't show "Hello World" programs</a></p>
+                <p>Showing all programs, including the "Hello World", workshop programs and similar programs. <a href="/programs?no_helloworld=1">Don't show "Hello World" programs</a></p>
             {% endif %}
         </div>
 
