this world has no future

--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -24,7 +24,9 @@
             <li>A prover submits a valid coinbase puzzle solution with the address</li>
             <li>(more to come when the network has more features)</li>
         </ul>
-        <p>The explorer could only track what's included in the blocks, so if your address hasn't interacted with the blockchain in the above situations, you won't find it in the explorer.</p>
+        <p>
+            The explorer could only track what's included in the blocks, so if your address hasn't interacted with the
+            blockchain in the above situations, you won't find it in the explorer.</p>
         <br>
 
         <h4>What exactly is "c/s"?</h4>
@@ -47,13 +49,14 @@
         </p>
         <br>
 
-        <h4>I'm blocked by the website</h4>
+        <h4 id="helloworld">About the new program filtering</h4>
         <p>
-            You are encouraged to run an explorer instance yourself if you want to get the info programatically. I will
-            monitor the website and ban any client which shows automatic behavior.
+            Some people are spamming the program list with workshop programs. For some obscure reason unbeknownst to
+            sane people, they are randomly modifying and even combining unrelated programs and spam with it.
+            The filtered list now filters all such programs.
         </p>
         <p>
-            Block decisions are final.
+            Yes, this now works like a blacklist. No, this will not change in the foreseeable future.
         </p>
 
     </div>
