--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -77,8 +77,8 @@
         {% call data_line("Transactions root") %}
             <span class="mono">{{ block.header.transactions_root }}</span>
         {% endcall %}
-        {% call data_line("Finalizer root") %}
-            <span class="mono">{{ block.header.finalizer_root }}</span>
+        {% call data_line("Finalize root") %}
+            <span class="mono">{{ block.header.finalize_root }}</span>
         {% endcall %}
         {% call data_line("Coinbase accumulator point") %}
             <span class="mono">{{ block.header.coinbase_accumulator_point }}</span>
