add program owner display

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -85,7 +85,7 @@
             margin-bottom: 0;
         }
 
-        .mono {
+        .mono, pre {
             font-family: monospace;
             font-size: 0.825rem;
         }
