--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -19,9 +19,11 @@
         </div>
 
         <h4>I can't find my address</h4>
-        <p>This usually means your address hasn't publicly appeared on the blockchain. An address would be logged when:</p>
+        <p>This usually means your address hasn't publicly appeared on the blockchain. Addresses would be logged when:</p>
         <ul>
             <li>A prover submits a valid coinbase puzzle solution with the address</li>
+            <li>A validator generates a new block</li>
+            <li>An address deploys a program</li>
             <li>(more to come when the network has more features)</li>
         </ul>
         <p>
