--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -105,7 +105,7 @@
                         <td><a href="/program?id={{ program.program_id }}">{{ program.program_id }}</a></td>
                         <td><a href="/block?h={{ program.height }}">{{ program.height }}</a></td>
                         <td>{{ program.timestamp | format_time | safe }}</td>
-                        <td><a href="/transaction?id={{ program.tx_id }}">{{ program.transaction_id }}</a></td>
+                        <td><a href="/transaction?id={{ program.transaction_id }}">{{ program.transaction_id }}</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
