--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -22,7 +22,7 @@
         <p>This usually means your address hasn't publicly appeared on the blockchain. Addresses would be logged when:</p>
         <ul>
             <li>A prover submits a valid coinbase puzzle solution with the address</li>
-            <li>A validator generates a new block</li>
+            <li>A validator generates a new block (not tracked right now)</li>
             <li>An address deploys a program</li>
             <li>(more to come when the network has more features)</li>
         </ul>
