fix webui transition

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -215,7 +215,7 @@
 <div class="footer-container">
     <div class="settings">
         Timezone display: <a onclick="toggle_timezone()"><span id="timezone-setting"></span></a><br>
-        Advanced mode: <a onclick="toggle_advanced()"><span id="advanced-setting"></span></a><br>
+        Advanced mode: <a onclick="toggle_advanced()" disabled><span id="advanced-setting"></span></a><br>
     </div>
     <div class="footer">
         <a href="https://github.com/HarukaMa/aleo-explorer" target="_blank">Open source</a> Aleo explorer made by Haruka. <br>
