--- a/webui/templates/programs.jinja2
+++ b/webui/templates/programs.jinja2
@@ -20,7 +20,7 @@
                 <p>Showing deployed programs excluding "Hello World", workshop programs and similar programs <sup>[<a
                         href="/faq#helloworld">?</a>]</sup>. <a href="/programs">Show all programs</a></p>
             {% else %}
-                <p>Showing all deployed programs. <a href="/programs?no_helloworld=1">Don't show "Hello World" programs</a></p>
+                <p>Showing all deployed programs. <a href="/programs?no_helloworld=1">Hide common programs</a></p>
             {% endif %}
         </div>
 
