--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -10,7 +10,7 @@
             margin: 20px 4px;
         }
 
-        #transitions {
+        #transitions, #rejected-transitions {
             margin-top: 20px;
         }
 
@@ -22,7 +22,7 @@
 
 {% endblock %}
 
-{% from "macros.jinja2" import data_line %}
+{% from "macros.jinja2" import data_line, state_label %}
 
 {% block content %}
 
@@ -32,42 +32,45 @@
         </div>
 
         <div id="data">
-        {% call data_line("Transaction ID") %}
-            <span class="mono">{{ tx_id }}</span>
-        {% endcall %}
-        {% call data_line("Block") %}
-            <a href="/block?h={{ block.header.metadata.height }}">{{ block.header.metadata.height }}</a>
-        {% endcall %}
-        {% call data_line("Index") %}
-            {{ index }}
-        {% endcall %}
-        {% call data_line("Type") %}
-            {{ type }}
-        {% endcall %}
-        {% if type == "AcceptedExecute" %}
-            {% call data_line("Global state root") %}
-            <span class="mono">{{ global_state_root }}</span>
+            {% call data_line("Transaction ID") %}
+                <span class="mono">{{ tx_id }}</span>
             {% endcall %}
-            {% call data_line("Inclusion proof") %}
-                {% if inclusion_proof %}
-                    <advanced-link scope="transaction" object="{{ tx_id }}" type="inclusion_proof">
-                        <span class="mono">{{ inclusion_proof }}</span>
-                    </advanced-link>
-                {% else %}
-                    -
-                {% endif %}
+            {% call data_line("Block") %}
+                <a href="/block?h={{ block.header.metadata.height }}">{{ block.header.metadata.height }}</a>
             {% endcall %}
-        {% elif type == "AcceptedDeploy" %}
-            {% call data_line("Edition") %}
-                {{ edition }}
+            {% call data_line("Index") %}
+                {{ index }}
             {% endcall %}
-            {% call data_line("Deployed program ID") %}
-                <a href="/program?id={{ program_id }}"><span class="mono">{{ program_id }}</span></a>
+            {% call data_line("Type") %}
+                {{ type }}
             {% endcall %}
-        {% endif %}
-        {% call data_line("Total fee") %}
-            {{ total_fee | format_aleo_credit }} Aleo credits
-        {% endcall %}
+            {% call data_line("State") %}
+                {{ state_label(state) }}
+            {% endcall %}
+            {% if type == "Execute" %}
+                {% call data_line("Global state root") %}
+                <span class="mono">{{ global_state_root }}</span>
+                {% endcall %}
+                {% call data_line("Inclusion proof") %}
+                    {% if inclusion_proof %}
+                        <advanced-link scope="transaction" object="{{ tx_id }}" type="inclusion_proof">
+                            <span class="mono">{{ inclusion_proof_trunc }}</span>
+                        </advanced-link>
+                    {% else %}
+                        -
+                    {% endif %}
+                {% endcall %}
+            {% elif type == "Deploy" %}
+                {% call data_line("Edition") %}
+                    {{ edition }}
+                {% endcall %}
+                {% call data_line("Deployed program ID") %}
+                    <a href="/program?id={{ program_id }}"><span class="mono">{{ program_id }}</span></a>
+                {% endcall %}
+            {% endif %}
+            {% call data_line("Total fee") %}
+                {{ total_fee | format_aleo_credit }} Aleo credits
+            {% endcall %}
         </div>
 
         <div id="transitions">
@@ -91,6 +94,32 @@
                 </tbody>
             </table>
         </div>
+
+        {% if state == "Rejected" %}
+            <div id="rejected-transitions">
+                <h4>Rejected Transitions</h4>
+                <table id="transitions-table" class="unstriped">
+                    <thead>
+                    <tr>
+                        <td>Transition ID</td>
+                        <td>Program / Function call</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for transition in rejected_transitions %}
+                        <tr>
+                            <td>
+                                <span class="mono"><a href="/transition?id={{ transition.transition_id }}">{{ transition.transition_id }}</a></span>
+                            </td>
+                            <td><span class="mono">{{ transition.action }}</span></td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
+
+
     </div>
 
 {% endblock %}
