--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -48,6 +48,26 @@
 
     <div class="content">
 
+        {% if "BETA" | get_env %}
+        <div id="beta">
+            <h4>This is the preview version of the explorer.</h4>
+            <p>
+                Currently, the preview version has an incomplete interpreter for Aleo instructions, so it could track
+                the data inside mappings. The values calculated by the explorer are checked with the hashes in the
+                blocks, so they should be correct. (The query UI is not implemented yet, so you can't see the values
+                right now)
+            </p>
+            <p>
+                As the interpreter still can't execute all instructions, the explorer will stop syncing when it
+                encounters a block with an instruction that it can't execute. Expect this to happen often.
+            </p>
+            <p>
+                For performance reasons, this instance of the explorer won't track the coinbase solutions and the
+                rewards of individual provers.
+            </p>
+        </div>
+        {% endif %}
+
         <div id="ticker">
             <div class="grid-x grid-padding-x">
                 <div class="cell large-auto ticker-cell">
