scroll long program

--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -18,6 +18,11 @@
             color: #cc4b37;
         }
 
+        pre {
+            overflow-y: scroll;
+            max-height: 400px;
+        }
+
     </style>
 
 {% endblock %}
